[gd_scene load_steps=10 format=3 uid="uid://ddlioyu0by21h"]

[ext_resource type="Script" path="res://main.gd" id="1_ki6lu"]
[ext_resource type="PackedScene" uid="uid://d2xo0hstp1qty" path="res://bar.tscn" id="2_kwv4r"]
[ext_resource type="Script" path="res://ui.gd" id="3_8a123"]
[ext_resource type="Script" path="res://bubble.gd" id="3_h415j"]
[ext_resource type="Script" path="res://selection.gd" id="4_ggfls"]
[ext_resource type="Script" path="res://cocktail.gd" id="5_pv835"]
[ext_resource type="Script" path="res://bogo.gd" id="6_gv1u3"]
[ext_resource type="Script" path="res://gnome.gd" id="7_xxu3s"]
[ext_resource type="Script" path="res://odd_even.gd" id="8_m7avv"]

[node name="Control" type="Control" node_paths=PackedStringArray("sorter")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ki6lu")
count = 100
speed = 0.0
bar_scene = ExtResource("2_kwv4r")
sorter = NodePath("Sorters/Selection")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="UI" type="HBoxContainer" parent="MarginContainer/VBoxContainer" node_paths=PackedStringArray("buttons_to_disable")]
layout_mode = 2
script = ExtResource("3_8a123")
buttons_to_disable = [NodePath("Shuffle"), NodePath("Sort")]

[node name="Shuffle" type="Button" parent="MarginContainer/VBoxContainer/UI"]
layout_mode = 2
text = "Shuffle"

[node name="Sort" type="Button" parent="MarginContainer/VBoxContainer/UI"]
layout_mode = 2
text = "Sort"

[node name="Options" type="OptionButton" parent="MarginContainer/VBoxContainer/UI"]
unique_name_in_owner = true
layout_mode = 2
selected = 0

[node name="Bars" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Bar" parent="MarginContainer/VBoxContainer/Bars" instance=ExtResource("2_kwv4r")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Sorters" type="Node" parent="."]
unique_name_in_owner = true

[node name="Bubble" type="Node" parent="Sorters"]
script = ExtResource("3_h415j")

[node name="Selection" type="Node" parent="Sorters"]
script = ExtResource("4_ggfls")

[node name="Cocktail" type="Node" parent="Sorters"]
script = ExtResource("5_pv835")

[node name="Bogo" type="Node" parent="Sorters"]
script = ExtResource("6_gv1u3")

[node name="Gnome" type="Node" parent="Sorters"]
script = ExtResource("7_xxu3s")

[node name="OddEven" type="Node" parent="Sorters"]
script = ExtResource("8_m7avv")

[connection signal="pressed" from="MarginContainer/VBoxContainer/UI/Shuffle" to="MarginContainer/VBoxContainer/UI" method="_on_shuffle_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UI/Sort" to="MarginContainer/VBoxContainer/UI" method="_on_sort_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/UI/Options" to="MarginContainer/VBoxContainer/UI" method="_on_options_item_selected"]
